--- a/DevcampPortfolio/app/views/portfolios/angular.html.erb
+++ b/DevcampPortfolio/app/views/portfolios/angular.html.erb
@@ -1,9 +1,9 @@
-<h1>Portfolio Items</h1>
+<h1>Angular Portfolio Items</h1>
 
 <%= link_to "Create New Item", new_portfolio_url %>
 
-<% @portfolio_item.each do |portfolio_item|%>
-  <p><%= link_to portfolio_item.title, portfolio_path(portfolio_item.id) %></p>
+<% @angular_portfolio_item.each do |portfolio_item|%>
+  <p><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></p>
   <p><%= portfolio_item.subtitle%></p>
   <p><%= portfolio_item.body%></p>
   <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil?%>
