--- a/DevcampPortfolio/app/views/layouts/portfolio.html.erb
+++ b/DevcampPortfolio/app/views/layouts/portfolio.html.erb
@@ -15,11 +15,11 @@
     <p class="alert"><%= alert %></p>
     
     <%= render "shared/nav", location: 'top' %>
+    
     <%= login_helper %>
+    
     <%= yield %>
     
-    <% if session[:source] %>
-    <p></p>Thanks for visiting me from <%= session[:source] %></p>
-    <% end %>
+   <%= source_helper("application") %>
   </body>
 </html>
