--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
       
     <%= yield %>
     
+    <%= copyright_generator %>
+    
+    
     <%= source_helper("application") %>
   </body>
 </html>
