--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -13,11 +13,14 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
+  
     
-    <%= render "shared/nav", location: 'top' %>
+    <%= render "shared/application_nav" %>
     <%= login_helper %>
       
     <%= yield %>
@@ -26,5 +29,8 @@
     
     
     <%= source_helper("application") %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
