--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -18,17 +18,15 @@
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container">
-  
-    
-    <%= render "shared/application_nav" %>
-    <%= login_helper %>
       
-    <%= yield %>
+          <%= render "shared/application_nav" %>
+
+          <%= yield %>
     
-    <%= copyright_generator %>
-    
-    
-    <%= source_helper("application") %>
+          <%= render "shared/application_footer" %>
+
+          <%= source_helper("application") %>
+      
         </div>
       </div>
     </div>
