Updated styles and added map for contact page

--- a/DevcampPortfolio/app/views/pages/about.html.erb
+++ b/DevcampPortfolio/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#about</h1>
+<h1>About Me</h1>
+
+<p>I am a senior high school student.</p>
+<p>I know 3 different coding languages</p>
+  <ul></ul>
 <p>Find me in app/views/pages/about.html.erb</p>
