--- a/DevcampPortfolio/app/views/layouts/blog.html.erb
+++ b/DevcampPortfolio/app/views/layouts/blog.html.erb
@@ -23,20 +23,19 @@
     
     <div class="blog-header">
       <div class="container">
-        <h1 class="blog-title">The Bootstrap Blog</h1>
+        <h1 class="blog-title">My Blog</h1>
         <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %> 
+
       </div>
     </div>
     
     <!--end of blog header-->
     
-    <!-- Start of container and row elements-->
     <div class="container">
 
       <div class="row">
         
-    <!-- end of container and row elements-->
-          
         <%= yield %>
         
         <!-- Start of side bar-->
@@ -71,7 +70,7 @@
             </ol>
           </div>
         </div>
-        <!-- End of sidebar -->
+      </div>  <!-- End of sidebar -->
         
         <!-- Start of footer -->
         <footer class="blog-footer">
@@ -83,10 +82,8 @@
         <!-- End of footer -->
         
         
-        <%= render "shared/nav", location: 'bottom' %>
-    
         <%= source_helper("blog") %>
-      </div>
+      
     </div>
   </body>
 </html>
