--- a/DevcampPortfolio/app/views/portfolios/_portfolio_item.html.erb
+++ b/DevcampPortfolio/app/views/portfolios/_portfolio_item.html.erb
@@ -1,8 +1,4 @@
-  <p><%= link_to portfolio_item.title, portfolio_path(portfolio_item.id) %></p>
-  <p><%= portfolio_item.subtitle%></p>
-  <p><%= portfolio_item.body%></p>
-  
-  
+<div class="card">
   <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil?%>
-  <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) if logged_in?(:site_admin) %>
-  <%= link_to 'Delete Post', portfolio_path(portfolio_item.id), method: :delete, data: { confirm: 'Are you sure?' }  if logged_in?(:site_admin)%>
+  <p class="card-text"><span><%= link_to portfolio_item.title, portfolio_path(portfolio_item.id) %></span><%= portfolio_item.subtitle%></p>
+</div>
