--- a/DevcampPortfolio/app/assets/stylesheets/application.scss
+++ b/DevcampPortfolio/app/assets/stylesheets/application.scss
@@ -162,16 +162,18 @@ body {
 }
 
 /*
- * Custom styles
+ * Custom Styles
  */
 
 .card-block {
   color: black;
   text-align: left;
 }
+
 .auth-links a {
-  color:black;
+  color: black;
 }
+
 .register-text {
   text-align: right;
 }
@@ -182,11 +184,7 @@ body {
   float: none;
 }
 
-
-
-
-
-
-
-
-
+.app-nav span {
+  margin-left: 15px;
+  margin-right: 15px;
+}
