Updated images for about me page

--- a/DevcampPortfolio/app/views/pages/about.html.erb
+++ b/DevcampPortfolio/app/views/pages/about.html.erb
@@ -1,6 +1,14 @@
 <h1>About Me</h1>
 
-<p>I am a senior high school student.</p>
-<p>I know 3 different coding languages</p>
-  <ul></ul>
-<p>Find me in app/views/pages/about.html.erb</p>
+<hr>
+
+<div class="row">
+  <div class="col-md-4">
+    <%= image_tag "maxresdefault.jpg", width: 300, alt: "profile image" %>
+  </div>
+  <div class="col-md-8">
+    <p>I am a senior high school student.</p>
+    <p>I know 3 different coding languages</p>
+  </div>
+</div>
+
