--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -34,6 +34,8 @@
           <%= yield %>
     
           <%= render "shared/application_footer" %>
+          
+          <%= render 'shared/alert' %>
 
           <%= source_helper("application") %>
       
