--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
     
           <%= render "shared/application_footer" %>
           
-          <%= render 'shared/alert' %>
+          <%= alerts %>
 
           <%= source_helper("application") %>
       
