Implemented jquery functions for action cable comment feature

--- a/DevcampPortfolio/app/views/blogs/show.html.erb
+++ b/DevcampPortfolio/app/views/blogs/show.html.erb
@@ -9,6 +9,8 @@
   </p>
   
   <%= render'comments/comment_form' %>
+  <div id="comments" data-blog-id= "<%= @blog_id%>">
+    <%= render @blog.comments %>
+  </div>
   
-  <%= render @blog.comments %>
 </div>
