--- a/DevcampPortfolio/app/views/blogs/show.html.erb
+++ b/DevcampPortfolio/app/views/blogs/show.html.erb
@@ -9,7 +9,8 @@
   </p>
   
   <%= render'comments/comment_form' %>
-  <div id="comments" data-blog-id= "<%= @blog_id%>">
+  
+  <div id="comments" data-blog-id="<%= @blog.id %>">
     <%= render @blog.comments %>
   </div>
   
