--- a/DevcampPortfolio/app/views/blogs/show.html.erb
+++ b/DevcampPortfolio/app/views/blogs/show.html.erb
@@ -8,8 +8,9 @@
   
   <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin)%> |
   <%= link_to 'Back', blogs_path %>
+  
   <p>
-  <%= @blog.body %>
+    <%= markdown @blog.body %>
   </p>
   
   <%= render'comments/comment_form' %>
