--- a/DevcampPortfolio/app/assets/stylesheets/blogs.scss
+++ b/DevcampPortfolio/app/assets/stylesheets/blogs.scss
@@ -190,3 +190,15 @@ h6, .h6 {
   font-size: 1.25em;
   margin: 0px 10px 0px 10px ;
 }
+
+.blog-nav {
+  margin-bottom: 30px;
+}
+
+.container a {
+  color: #0ecbdb;
+}
+
+.pug a{
+  color: #0ecbdb;
+}
