--- a/DevcampPortfolio/app/assets/stylesheets/blogs.scss
+++ b/DevcampPortfolio/app/assets/stylesheets/blogs.scss
@@ -168,6 +168,7 @@ h6, .h6 {
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
+  
 }
 
 /*
@@ -199,6 +200,10 @@ h6, .h6 {
   color: #0ecbdb;
 }
 
-.pug a{
+.blog-sidebar-source {
+  margin-top: 20px;
+}
+
+.blog-footer p:last-child a {
   color: #0ecbdb;
 }
