Implemented style changes for about and contact pages

--- a/DevcampPortfolio/app/views/pages/about.html.erb
+++ b/DevcampPortfolio/app/views/pages/about.html.erb
@@ -1,14 +1,20 @@
-<h1>About Me</h1>
+<div class="app-card-container">
+  <div class="card">
+        
+    <h1>About Me</h1>
+    
+    <hr>
+    
+    <div class="row">
+      <div class="col-md-4">
+        <%= image_tag "maxresdefault.jpg", width: 300, alt: "profile image", class:"profile-img" %>
+      </div>
+      <div class="col-md-8">
+        <p>I am a senior high school student.</p>
+        <p>I know 3 different coding languages</p>
+      </div>
+    </div>
 
-<hr>
 
-<div class="row">
-  <div class="col-md-4">
-    <%= image_tag "maxresdefault.jpg", width: 300, alt: "profile image" %>
-  </div>
-  <div class="col-md-8">
-    <p>I am a senior high school student.</p>
-    <p>I know 3 different coding languages</p>
   </div>
 </div>
-
