--- a/DevcampPortfolio/app/views/pages/contact.html.erb
+++ b/DevcampPortfolio/app/views/pages/contact.html.erb
@@ -1,17 +1,40 @@
-<h1>Pages#contact</h1>
-<p><%= number_to_phone "5555555555" %></p>
-
-<p><%= number_to_currency "90" %></p>
-
-<p><%= number_to_percentage "45.5" %></p>
-
-<p><%= number_with_delimiter "5555555555" %></p>
-
-<hr>
-
-<div class="col-md-6">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3026.43116188011!2d
--111.99460068418837!3d40.664467979336976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2
-!1s0x87528c4e3d7385ad%3A0x1a779d691c4892c5!2s4228+Law+Cir%2C+Kearns%2C+UT+84118!5e0!3m2!1
-sen!2sus!4v1499363685578" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+<div class="app-card-container">
+  <div class="card">
+            
+    <h1>Would you like to work together?</h1>   
+    
+    <hr>
+    
+    <div class="row">
+        
+      
+      <div class="col-md-6">
+        <h3>Home</h3>
+        
+        <p>?????</p>
+        
+        <h3>Phone</h3>
+        
+        <p><%= number_to_phone "801-000-0000" %></p>
+        
+        <h3>Email</h3>
+        
+        <p><a href="mailto:brittneymrls@gmail.com?subject=PortfolioContact""email me">Email me</a></p>
+        
+      </div>
+      <!--<p><%= number_to_phone "5555555555" %></p>
+      
+      <p><%= number_to_currency "90" %></p>
+      
+      <p><%= number_to_percentage "45.5" %></p>
+      
+      <p><%= number_with_delimiter "5555555555" %></p>
+      -->
+   
+      <div class="col-md-6">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3026.4311618801175!2d-111.99460068418837!3d40.664467979336955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87528c4e3d7385ad%3A0x1a779d691c4892c5!2s4228+Law+Cir%2C+Kearns%2C+UT+84118!5e0!3m2!1
+      sen!2sus!4v1502210272855" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
 </div>
