Updated about page to have collapsable components

--- a/DevcampPortfolio/app/views/pages/about.html.erb
+++ b/DevcampPortfolio/app/views/pages/about.html.erb
@@ -12,6 +12,60 @@
       <div class="col-md-8">
         <p>I am a senior high school student.</p>
         <p>I know 3 different coding languages</p>
+        
+        <p>
+          <button
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#jobHistory"
+            aria-expanded="false"
+            aria-controler="jobHistory"
+          >
+            Job History
+          </button>
+          <button
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#education"
+            aria-expanded="false"
+            aria-controler="education"
+          >
+            Education
+          </button>
+        </p>
+        
+        <p>
+          <div class="collapse" id="jobHistory">
+            <div class="card card-block">
+              Jobs(put here)
+            </div>
+            <div class="card card-block">
+              Jobs(put here)
+            </div>
+            <div class="card card-block">
+              Jobs(put here)
+            </div>
+            <div class="card card-block">
+              Jobs(put here)
+            </div>
+          </div>
+          <div class="collapse" id="education">
+            <div class="card card-block">
+              School(put here)
+            </div>
+            <div class="card card-block">
+              School(put here)
+            </div>
+            <div class="card card-block">
+              School(put here)
+            </div>
+            <div class="card card-block">
+              School(put here)
+            </div>
+          </div>
+        </p>
       </div>
     </div>
 
