--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -7,7 +7,12 @@
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
     
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arimo|PT+Serif" rel="stylesheet">
+    
     <meta name="keywords" content=<%= @seo_keywords %>/>
+    
+    
     
     <%= favicon_link_tag 'favicons/faviconBM.ico' %>
 
