--- a/DevcampPortfolio/app/views/layouts/blog.html.erb
+++ b/DevcampPortfolio/app/views/layouts/blog.html.erb
@@ -8,6 +8,9 @@
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
     
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arimo|PT+Serif" rel="stylesheet">
+    
     <meta name="keywords" content=<%= @seo_keywords %>/>
     
     <%= favicon_link_tag 'favicons/code.ico' %>
